# RustSystem

./: Cargo.toml  README.md  x86_64-os.json
.cargo/: config.toml
crates/allocators/: Cargo.toml
crates/allocators/src/: fixed_block.rs  lib.rs
crates/custom-types/: Cargo.toml
crates/custom-types/src/: lib.rs  spin_lock.rs
crates/datetime/: Cargo.toml
crates/datetime/src/: date_time.rs  lib.rs
crates/gdt/: Cargo.toml
crates/gdt/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/pit/: Cargo.toml
crates/pit/src/: lib.rs
crates/serial/: Cargo.toml
crates/serial/src/: lib.rs
crates/vga/: Cargo.toml
crates/vga/src/: buffer.rs  colors.rs  lib.rs  writer.rs
src/: allocator.rs  channel.rs  commands.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  serial.rs  spin_lock.rs  syscalls.rs  vga_buffer.rs
src/custom_types/: list.rs  mod.rs  spin_lock.rs
src/task/: executor.rs  keyboard.rs
src/vga_buffer/: buffer.rs  colors.rs  console.rs  mod.rs  writer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
