[package]
name = "oper_system"
version = "0.1.0"
edition = "2021"

[[test]]    #настраиваем тестовый сценарий для паники
name = "should_panic"
harness = false

[[test]]    #настраиваем тестовый сценарий переполнения стека
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}    #реализует базовый BIOS-загрузчик без каких-либо C-зависимостей
linked_list_allocator = "0.9.0"    # предоставляет способы управления и выделения блоков памяти для аллокатора
volatile = "0.2.6"    #предоставляет инструменты для безопасной работы с важными данными и регистрами аппаратуры
x86_64 = "0.14.2"    #предоставляет инструменты и абстракции для работы с архитектурой x86_64
uart_16550 = "0.2.0"    #ящик для инициализации UART и отправки данных через последовательный порт
pic8259 = "0.10.1"    #предоставляет интерфейс для работы с контроллерами прерываний Intel 8259
pc-keyboard = "0.5.0"    #простой драйвер для работы с клавиатурой
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }    #предоставляет макрос для лениво инициализируемых статических переменных
spin = "0.5.2"    #реализует примиты для управления ресурсами

#[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort"
#lto = true
#codegen-units = 1

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]    #допольнительные флаги для более удобного проецесса тестирования
test-success-exit-code = 33    #код завершения для успешно выполненных тестов
test-timeout = 5    #максимальное время ожидания тестов